CURO-1 Add Windows Support (File => URL Problems)